--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
+    "memory-cache": "^0.2.0",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1"
   },
