--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "private": true,
     "scripts": {
         "start": "node ./bin/www",
-        "dev": "nodemon ./bin/www"
+        "dev": "nodemon ./bin/www",
+        "build:css": "postcss public/input.css -o public/output.css"
     },
     "dependencies": {
         "axios": "^1.4.0",
@@ -20,7 +21,12 @@
         "morgan": "~1.9.1"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.18",
+        "autoprefixer": "^10.4.24",
         "nodemon": "^3.0.1",
-        "prettier": "^3.8.1"
+        "postcss": "^8.5.6",
+        "postcss-cli": "^11.0.1",
+        "prettier": "^3.8.1",
+        "tailwindcss": "^4.1.18"
     }
 }
