--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "express": "^4.18.2",
         "memory-cache": "^0.2.0",
         "method-override": "^3.0.0",
-        "morgan": "~1.9.1"
+        "morgan": "~1.9.1",
+        "playwright": "^1.58.2"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4.1.18",
