feat(docker): add hot-reload development stage and switch to puppeteer
- Add development stage to Dockerfile with nodemon and CSS watcher
- Create docker-compose.dev.yml for hot-reload development
- Switch from playwright to puppeteer for headless browsing
- Add toongod scraper configuration
- Update .dockerignore for development workflow
- Update CLAUDE.md with comprehensive development instructions

--- a/.dockerignore
+++ b/.dockerignore
@@ -4,7 +4,7 @@ npm-debug.log
 .gitignore
 README.md
 .env
-public/output.css
+# public/output.css commented out for development hot-reload
 .DS_Store
 *.log
 .vscode
