--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,27 +1,51 @@
 version: '3.8'
 
 services:
-  web:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: development  # Use dev stage
-    container_name: cumabaca-dev
-    restart: unless-stopped
-    ports:
-      - "3100:3100"
-    environment:
-      - NODE_ENV=development
-    volumes:
-      # Mount source code for hot-reload
-      # :z flag for SELinux compatibility (Podman on Fedora)
-      - ./routes:/app/routes:z
-      - ./scrapers:/app/scrapers:z
-      - ./config:/app/config:z
-      - ./utils:/app/utils:z
-      - ./public:/app/public:z
-      - ./app.js:/app/app.js:z
-      - ./bin:/app/bin:z
-      # Preserve node_modules in container
-      - /app/node_modules
-    # CMD runs both nodemon + CSS watcher (defined in Dockerfile)
+    mongodb:
+        image: mongo:7
+        container_name: cumabaca-mongo-dev
+        restart: unless-stopped
+        ports:
+            - '27017:27017'
+        volumes:
+            - mongodb_data_dev:/data/db
+        environment:
+            MONGO_INITDB_DATABASE: cumabaca
+        healthcheck:
+            test: ['CMD', 'mongosh', '--eval', "db.adminCommand('ping')"]
+            interval: 10s
+            timeout: 5s
+            retries: 3
+
+    web:
+        build:
+            context: .
+            dockerfile: Dockerfile
+            target: development # Use dev stage
+        container_name: cumabaca-dev
+        restart: unless-stopped
+        ports:
+            - '3100:3100'
+        environment:
+            - NODE_ENV=development
+            - MONGODB_URI=mongodb://mongodb:27017/cumabaca
+            - CACHE_TTL=86400
+        depends_on:
+            mongodb:
+                condition: service_healthy
+        volumes:
+            # Mount source code for hot-reload
+            # :z flag for SELinux compatibility (Podman on Fedora)
+            - ./routes:/app/routes:z
+            - ./scrapers:/app/scrapers:z
+            - ./config:/app/config:z
+            - ./utils:/app/utils:z
+            - ./public:/app/public:z
+            - ./app.js:/app/app.js:z
+            - ./bin:/app/bin:z
+            # Preserve node_modules in container
+            - /app/node_modules
+        # CMD runs both nodemon + CSS watcher (defined in Dockerfile)
+
+volumes:
+    mongodb_data_dev:
