--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express": "^4.18.2",
         "memory-cache": "^0.2.0",
         "method-override": "^3.0.0",
+        "mongodb": "^6.21.0",
         "morgan": "~1.9.1",
         "puppeteer": "^23.11.1"
     },
